--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -33,7 +33,7 @@ nav .header {
 }
 
 nav .header .logo img {
-  width: 65%;
+  width: 55%;
 }
 
 nav .header .navbar ul {
@@ -44,6 +44,10 @@ nav .header .navbar ul {
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav .header .navbar ul li {
@@ -56,17 +60,28 @@ nav .header .navbar ul li:hover .drop {
 }
 
 nav .header .navbar ul li a {
+  position: relative;
   text-decoration: none;
-  font-size: 10px;
+  font-size: 15px;
+  text-transform: capitalize;
+  color: #444444;
+}
+
+nav .header .navbar ul li i {
+  vertical-align: 0.2em;
+  margin-left: 5px;
 }
 
 nav .header .navbar ul li .drop {
   display: none;
   line-height: 3;
   position: absolute;
-  margin-top: 50px;
+  margin-top: 15px;
   background-color: #fff;
   width: 300px;
+  border: 1px solid #e6e6e6;
+  -webkit-box-shadow: 0 2px 10px 0 #444444;
+          box-shadow: 0 2px 10px 0 #444444;
   border-radius: 4px;
 }
 
@@ -80,11 +95,12 @@ nav .header .navbar ul li .drop .drop-down {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #e6e6e6;
   padding: 0 15px;
 }
 
 nav .header .navbar ul li .drop a {
+  text-transform: capitalize;
   text-decoration: none;
   color: #000;
   padding-left: 10px;
