--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -10,7 +10,6 @@
 
 nav{
     .header{
-        
         background: #fff;
         display: grid;
         grid-template-columns: 1fr 3fr;
@@ -25,7 +24,7 @@ nav{
         margin: auto;
         .logo{
             img{
-                width: 65%;
+                width: 55%;
             }
         }
         .navbar{
@@ -33,6 +32,8 @@ nav{
                 display: flex;
                 justify-content: space-between;
                 list-style: none;
+                text-align: center;
+                align-items: center;
                 li{
                     position: relative;
                     font-size: .9rem;
@@ -42,25 +43,35 @@ nav{
                         }
                     }
                     a{
+                        position: relative;
                         text-decoration: none;
-                        font-size: 10px;
+                        font-size: 15px;
+                        text-transform: capitalize;
+                        color: rgb(68, 68, 68);
+                    }
+                    i{
+                        vertical-align: 0.2em;
+                        margin-left: 5px;
                     }
                     .drop{
                         display: none;
                         line-height: 3;
                         position: absolute;
-                        margin-top: 50px;
+                        margin-top: 15px;
                         background-color: #fff;
                         width: 300px;
+                        border: 1px solid #e6e6e6;
+                        box-shadow: 0 2px 10px 0 rgb(68, 68, 68);
                         border-radius: 4px;
                         .drop-down{
                             display: flex;
                             align-items: center;
                             justify-content: space-between;
-                            border-bottom: 1px solid gray;
+                            border-bottom: 1px solid #e6e6e6;
                             padding: 0 15px;
                         }
                         a{
+                            text-transform: capitalize;
                             text-decoration: none;
                             color: #000;
                             padding-left: 10px;
