open-close side nav created

--- a/styles/button.scss
+++ b/styles/button.scss
@@ -2,6 +2,6 @@
     border-radius: 5px;
     font-size: 20px;
     font-weight: 300;
-    border: 1px solid gray;
-    padding: 10px 25px;
+    border: none;
+    padding: 5px 25px;
 }
