--- a/styles/button.css
+++ b/styles/button.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   font-size: 20px;
   font-weight: 300;
-  border: 1px solid gray;
-  padding: 10px 25px;
+  border: none;
+  padding: 5px 25px;
 }
 /*# sourceMappingURL=button.css.map */
