--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -14,9 +14,8 @@ nav{
         display: grid;
         grid-template-columns: 1fr 3fr;
         align-items: center;
-        padding: 10px 20px;
+        padding: 5px 20px;
         width: 100%;
-        height: 13vh;
         position: fixed;
         top: 0;
         left: 0px;
@@ -24,7 +23,7 @@ nav{
         margin: auto;
         .logo{
             img{
-                width: 55%;
+                width: 150px;
             }
         }
         .navbar{
@@ -46,16 +45,19 @@ nav{
                         position: relative;
                         text-decoration: none;
                         font-size: 15px;
+                        margin-right: 5px;
                         text-transform: capitalize;
                         color: rgb(68, 68, 68);
+                        &:hover{
+                            color: $blue;
+                        }
                     }
                     i{
                         vertical-align: 0.2em;
-                        margin-left: 5px;
                     }
                     .drop{
                         display: none;
-                        line-height: 3;
+                        line-height: 2.7;
                         position: absolute;
                         margin-top: 15px;
                         background-color: #fff;
@@ -68,50 +70,57 @@ nav{
                             align-items: center;
                             justify-content: space-between;
                             border-bottom: 1px solid #e6e6e6;
-                            padding: 0 15px;
-                        }
-                        a{
-                            text-transform: capitalize;
-                            text-decoration: none;
-                            color: #000;
-                            padding-left: 10px;
-                            font-size: 15px;
+                            padding: 0 10px;
+                            &:hover{
+                                background: $blue;
+                                color: #fff;
+                            }
+                            a{
+                                text-transform: capitalize;
+                                text-decoration: none;
+                                color: #000;
+                                font-size: 13px;
+                                &:hover{
+                                    color: #fff;
+                                }
+                            }
                         }
                     }
                     .wrapper .button{
                         display: inline-block;
-                        height: 40px;
-                        width: 40px;
+                        height: 35px;
+                        width: 35px;
                         margin: 0 5px;
                         overflow: hidden;
                         background: #fff;
                         border-radius: 50px;
                         cursor: pointer;
+                        border: 1px solid #e6e6e6 ;
                         box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
                         transition: all 0.3s ease-out;
                         .icon{
                             display: inline-block;
                             height: 10px;
-                            width: 35px;
+                            width: 25px;
                             text-align: center;
                             border-radius: 50px;
                             box-sizing: border-box;
                             line-height: 40px;
                             i{
                                 color: #25d362;
-                                font-size: 25px;
-                                line-height: 39px;
+                                font-size: 20px;
+                                line-height: 35px;
                             }
                             i.fa-solid.fa-phone{
                                 color: #000;
-                                font-size: 25px;
-                                line-height: 39px;
+                                font-size: 20px;
+                                line-height: 35px;
                             }
                         }
                         span{
                             font-size: 20px;
                             font-weight: 500;
-                            line-height: 30px;
+                            vertical-align: 0.3rem;
                             margin-left: 15px;
                         }
                     }
@@ -131,8 +140,136 @@ nav{
                 }
             }
         }
+        .open-nav-menu{
+            height: 34px;
+            width: 40px;
+            position: relative;
+            justify-self: flex-end;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            span{
+                display: block;
+                height: 3.5px;
+                width: 30px;
+                background-color: #000;
+                position: relative;
+                border-radius: 15px;
+                &:before,
+                &:after{
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #000;
+                    border-radius: 15px;
+                }
+                &:before{
+                    top: -7px;
+                }
+                &:after{
+                    top: 7px;
+                }
+            }
+        }
+        .close-nav-menu{
+            height: 40px;
+            width: 40px;
+            margin: 0 0 15px 15px;
+            cursor: pointer;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            i{
+                font-size: 30px;
+                color: #fff;
+                &:hover{
+                    color: $orange;
+                }
+            }
+        }
     }
     .header.black{
+        margin-top: -5px;
         box-shadow: 0 0 20px black;
+    }
+    .icons{
+        #menu-btn{
+            display: none;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:1100px){
+    nav{
+        .header{
+            .navbar{
+                display: none;
+                position: fixed;
+                right: 0;
+                width: 70%;
+                height: 100%;
+                top: 0;
+                background-color: $blue;
+                padding: 15px 0;
+                ul{
+                    display: block;
+                    li{
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 15px;
+                        // color: #fff;
+                        a{
+                            color: #fff;
+                            &:hover{
+                                color: $orange;
+                            }
+                        }
+                        i{
+                            color: #fff;
+                        }
+                        .drop{
+                            width: 100%;
+                            position: relative;
+                            opacity: 1;
+                            left: 0;
+                            width: 100%;
+                            .drop-down:hover{
+                                background: $orange;
+                            }
+                        }
+                        .btn{
+                            button{
+                                background-color: $orange;
+                                display: flex;
+                                justify-content: center;
+                                margin-top: 20px;
+                                &:hover{
+                                    background: #e6e6e6;
+                                    color: #000;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .close-nav-menu,
+            .open-nav-menu{
+                display: flex;
+            }
+        }
     }
 }
