--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -1,3 +1,4 @@
+@import url(c:\Users\subaa\memo\day-six\styles\mediaquery.css);
 .button-basic, nav .header .navbar ul li .btn button {
   border-radius: 5px;
   font-size: 20px;
@@ -29,6 +30,7 @@ nav .header {
   left: 0px;
   right: 0px;
   margin: auto;
+  z-index: 1000;
 }
 
 nav .header .logo img {
@@ -39,14 +41,14 @@ nav .header .navbar ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
   text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 nav .header .navbar ul li {
@@ -178,18 +180,18 @@ nav .header .navbar ul li .btn button:hover {
 }
 
 nav .header .open-nav-menu {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: none;
+  cursor: pointer;
   height: 34px;
   width: 40px;
   position: relative;
   justify-self: flex-end;
-  display: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
 }
 
 nav .header .open-nav-menu span {
@@ -220,17 +222,17 @@ nav .header .open-nav-menu span:after {
 }
 
 nav .header .close-nav-menu {
-  height: 40px;
-  width: 40px;
-  margin: 0 0 15px 15px;
-  cursor: pointer;
-  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  display: none;
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  margin: 0 0 15px 15px;
 }
 
 nav .header .close-nav-menu i {
@@ -244,12 +246,50 @@ nav .header .close-nav-menu i:hover {
 
 nav .header.black {
   margin-top: -5px;
-  -webkit-box-shadow: 0 0 20px black;
-          box-shadow: 0 0 20px black;
+  -webkit-box-shadow: 0 0 20px #000;
+          box-shadow: 0 0 20px #000;
 }
 
 nav .icons #menu-btn {
   display: none;
+}
+
+section .search-play {
+  background-image: url(../assets/images/background.jpg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin-top: 3.5rem;
+  background-size: 100% 90%;
+  position: relative;
+}
+
+section .search-play .search-1 {
+  position: absolute;
+  border: 0.5px solid gray;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0.1em;
+  padding: 0 1em;
+  color: #9aaa97;
+  width: 50%;
+  margin-top: 60px;
+  -webkit-transform: translate(55%, 50%);
+          transform: translate(55%, 50%);
+}
+
+section .search-play .search-1 input {
+  height: 40px;
+  border-radius: 30px;
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 @media (max-width: 1100px) {
@@ -270,6 +310,9 @@ nav .icons #menu-btn {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -296,12 +339,6 @@ nav .icons #menu-btn {
   }
   nav .header .navbar ul li .btn button {
     background-color: #efa434;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     margin-top: 20px;
   }
   nav .header .navbar ul li .btn button:hover {
