--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -1,6 +1,7 @@
 @import "button";
 @import "color";
-
+@import "mixin";
+@import "mediaquery";
 
 *{
     margin: 0;
@@ -10,7 +11,7 @@
 
 nav{
     .header{
-        background: #fff;
+        background: $white;
         display: grid;
         grid-template-columns: 1fr 3fr;
         align-items: center;
@@ -21,6 +22,7 @@ nav{
         left: 0px;
         right: 0px;
         margin: auto;
+        z-index: 1000;
         .logo{
             img{
                 width: 150px;
@@ -28,11 +30,9 @@ nav{
         }
         .navbar{
             ul{
-                display: flex;
-                justify-content: space-between;
+                @include flex;
                 list-style: none;
                 text-align: center;
-                align-items: center;
                 li{
                     position: relative;
                     font-size: .9rem;
@@ -60,28 +60,26 @@ nav{
                         line-height: 2.7;
                         position: absolute;
                         margin-top: 15px;
-                        background-color: #fff;
+                        background-color: $white;
                         width: 300px;
-                        border: 1px solid #e6e6e6;
+                        border: 1px solid $border;
                         box-shadow: 0 2px 10px 0 rgb(68, 68, 68);
                         border-radius: 4px;
                         .drop-down{
-                            display: flex;
-                            align-items: center;
-                            justify-content: space-between;
-                            border-bottom: 1px solid #e6e6e6;
+                            @include flex;
+                            border-bottom: 1px solid $border;
                             padding: 0 10px;
                             &:hover{
                                 background: $blue;
-                                color: #fff;
+                                color: $white;
                             }
                             a{
                                 text-transform: capitalize;
                                 text-decoration: none;
-                                color: #000;
+                                color: $black;
                                 font-size: 13px;
                                 &:hover{
-                                    color: #fff;
+                                    color: $white;
                                 }
                             }
                         }
@@ -92,10 +90,10 @@ nav{
                         width: 35px;
                         margin: 0 5px;
                         overflow: hidden;
-                        background: #fff;
+                        background: $white;
                         border-radius: 50px;
                         cursor: pointer;
-                        border: 1px solid #e6e6e6 ;
+                        border: 1px solid $border ;
                         box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
                         transition: all 0.3s ease-out;
                         .icon{
@@ -107,12 +105,12 @@ nav{
                             box-sizing: border-box;
                             line-height: 40px;
                             i{
-                                color: #25d362;
+                                color: $whatsup;
                                 font-size: 20px;
                                 line-height: 35px;
                             }
                             i.fa-solid.fa-phone{
-                                color: #000;
+                                color: $black;
                                 font-size: 20px;
                                 line-height: 35px;
                             }
@@ -130,7 +128,7 @@ nav{
                     .btn{
                        button{
                         @extend .button-basic;
-                        color: #fff;
+                        color: $white;
                         background: $blue;
                        }
                        button:hover{
@@ -141,19 +139,16 @@ nav{
             }
         }
         .open-nav-menu{
+            @include center;
             height: 34px;
             width: 40px;
             position: relative;
             justify-self: flex-end;
-            display: none;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
             span{
                 display: block;
                 height: 3.5px;
                 width: 30px;
-                background-color: #000;
+                background-color: $black;
                 position: relative;
                 border-radius: 15px;
                 &:before,
@@ -163,7 +158,7 @@ nav{
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    background-color: #000;
+                    background-color: $black;
                     border-radius: 15px;
                 }
                 &:before{
@@ -175,16 +170,13 @@ nav{
             }
         }
         .close-nav-menu{
+            @include center;
             height: 40px;
             width: 40px;
             margin: 0 0 15px 15px;
-            cursor: pointer;
-            display: none;
-            align-items: center;
-            justify-content: center;
             i{
                 font-size: 30px;
-                color: #fff;
+                color: $white;
                 &:hover{
                     color: $orange;
                 }
@@ -193,7 +185,7 @@ nav{
     }
     .header.black{
         margin-top: -5px;
-        box-shadow: 0 0 20px black;
+        box-shadow: 0 0 20px $black;
     }
     .icons{
         #menu-btn{
@@ -201,6 +193,48 @@ nav{
         }
     }
 }
+
+
+
+
+
+section{
+    .search-play{
+        background-image: url(../assets/images/background.jpg);
+        background-repeat: no-repeat;
+        height: 100vh;
+        margin-top: 3.5rem;
+        background-size: 100% 90%;
+        position: relative;
+        .search-1 {
+            position: absolute;
+            border: 0.5px solid gray;
+            @include flex;
+            gap: 0.1em;
+            padding: 0 1em;
+            color: #9aaa97;
+            width: 50%;
+            margin-top: 60px;
+            transform: translate(55%, 50%);
+            input {
+                height: 40px;
+                border-radius: 30px;
+                border: none;
+                outline: none;
+                background-color: transparent;
+              }
+          }
+    }
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -228,18 +262,16 @@ nav{
                 ul{
                     display: block;
                     li{
-                        display: flex;
-                        justify-content: space-between;
+                        @include flex;
                         padding: 15px;
-                        // color: #fff;
                         a{
-                            color: #fff;
+                            color: $white;
                             &:hover{
                                 color: $orange;
                             }
                         }
                         i{
-                            color: #fff;
+                            color: $white;
                         }
                         .drop{
                             width: 100%;
@@ -254,12 +286,10 @@ nav{
                         .btn{
                             button{
                                 background-color: $orange;
-                                display: flex;
-                                justify-content: center;
                                 margin-top: 20px;
                                 &:hover{
-                                    background: #e6e6e6;
-                                    color: #000;
+                                    background: $border;
+                                    color: $black;
                                 }
                             }
                         }
