--- a/style/suganya.css
+++ b/style/suganya.css
@@ -100,6 +100,7 @@
 }
 
 .navbar_brand .navbar .drop .drop_down:hover {
+  border-left: 3px solid fuchsia;
   background-color: #fca311;
   color: #ffffff;
 }
@@ -200,6 +201,72 @@
   outline: none;
   padding: 15px;
   background-color: transparent;
+}
+
+.background_image .popular {
+  text-align: center;
+  position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  -webkit-transform: translate(0, 600%);
+          transform: translate(0, 600%);
+}
+
+.background_image .popular h5 {
+  font-size: 20px;
+}
+
+.background_image .content {
+  -webkit-transform: translate(5%, 300%);
+          transform: translate(5%, 300%);
+  margin: 0 100px;
+}
+
+.background_image .content ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: inherit;
+}
+
+.background_image .content ul li p {
+  background-color: #c8deec;
+  font-size: 11px;
+  border-radius: 10px;
+  margin: 5px 3px;
+  padding: 6px;
+}
+
+.background_image .moblie_app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.background_image .moblie_app .google img {
+  width: 30px;
+}
+
+.background_image .moblie_app i {
+  color: #fca311;
 }
 
 @media (max-width: 1200px) {
