--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -78,6 +78,7 @@
       width: 300px;
       border-radius: 5px;
       .drop_down:hover {
+        border-left: 3px solid fuchsia;
         background-color: #fca311;
         color: #ffffff;
         p:hover {
@@ -155,6 +156,51 @@
         padding: 15px;
         background-color: transparent;
       }
+    }
+  }
+  .popular {
+    text-align: center;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    transform: translate(0, 600%);
+
+    h5 {
+      font-size: 20px;
+    }
+  }
+  .content {
+    transform: translate(5%, 300%);
+    margin: 0 100px;
+    ul {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      list-style: none;
+      flex-wrap: wrap;
+      margin: inherit;
+
+      li {
+        p {
+          background-color: #c8deec;
+          font-size: 11px;
+          border-radius: 10px;
+          margin: 5px 3px;
+          padding: 6px;
+        }
+      }
+    }
+  }
+  .moblie_app {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    .google img {
+      width: 30px;
+    }
+    i {
+      color: #fca311;
     }
   }
 }
