--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\subaa\memo\day-six\styles\mediaquery.css);
+@import url(c:\Users\User\day__six\styles\mediaquery.css);
 .button-basic, nav .header .navbar ul li .btn button {
   border-radius: 5px;
   font-size: 20px;
