--- a/style/suganya.css
+++ b/style/suganya.css
@@ -84,7 +84,7 @@
 }
 
 .navbar_brand .navbar .btn button:hover {
-  background: #ff9f1c;
+  background: #fca311;
 }
 
 .navbar_brand .navbar .drop {
@@ -94,13 +94,13 @@
   margin-top: 15px;
   -webkit-box-shadow: 0 2px 10px 0 black;
           box-shadow: 0 2px 10px 0 black;
-  background-color: #fff;
+  background-color: #ffffff;
   width: 300px;
   border-radius: 5px;
 }
 
 .navbar_brand .navbar .drop .drop_down:hover {
-  border-left: 3px solid fuchsia;
+  border-left: 3px solid #1b3b6f;
   background-color: #fca311;
   color: #ffffff;
 }
@@ -110,7 +110,7 @@
 }
 
 .navbar_brand .navbar .drop p {
-  color: #1d4e89;
+  color: #1b3b6f;
   font-weight: bold;
   padding-left: 10px;
   font-size: 16px;
@@ -127,14 +127,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #bbdefb;
   padding: 0 15px;
 }
 
 .navbar_brand .navbar .fa-whatsapp {
   font-weight: bold;
   color: #25d362;
-  font-size: 25px;
+  font-size: 27px;
 }
 
 .navbar_brand .navbar .fa-whatsapp p {
@@ -144,7 +144,7 @@
 }
 
 .navbar_brand .navbar .fa-phone {
-  color: #14213d;
+  color: #1b3b6f;
   font-size: 24px;
   font-weight: bold;
 }
@@ -152,7 +152,7 @@
 .navbar_brand .navbar .fa-phone p {
   color: #6d6875;
   font-size: 20px;
-  margin-top: 5px;
+  margin-top: 6px;
 }
 
 .navbar_brand .navbar .fa-play {
@@ -160,8 +160,8 @@
 }
 
 .navbar_brand.shadow {
-  -webkit-box-shadow: 0 0 20px black;
-          box-shadow: 0 0 20px black;
+  -webkit-box-shadow: 0 0 20px #6d6875;
+          box-shadow: 0 0 20px #6d6875;
 }
 
 .background_image {
@@ -181,26 +181,34 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: absolute;
-  border: 0.5px solid gray;
+  border: 0.5px solid #bbdefb;
+  border-radius: 5px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   gap: 0.1em;
   padding: 0 1em;
-  color: #9aaa97;
+  color: #fca311;
   width: 50%;
-  margin-top: 60px;
+  margin-top: 70px;
   -webkit-transform: translate(55%, 50%);
           transform: translate(55%, 50%);
 }
 
+.background_image .search_box .search:hover {
+  color: #1b3b6f;
+}
+
 .background_image .search_box .search input {
-  height: 60px;
   border-radius: 30px;
   border: none;
   outline: none;
-  padding: 15px;
+  padding: 14px;
   background-color: transparent;
+}
+
+.background_image .search_box .search .fa-search {
+  cursor: pointer;
 }
 
 .background_image .popular {
@@ -275,6 +283,30 @@
 
 .background_image .moblie_app .google_play img {
   width: 100%;
+}
+
+.card_container {
+  position: relative;
+}
+
+.card_container .corpbiz_box {
+  border: 1px solid blue;
+  background-color: #153c7b;
+  color: #ffffff;
+  width: 30%;
+  position: absolute;
+  left: 50px;
+  padding: 50px;
+  border-radius: 10px;
+}
+
+.card_container .corpbiz_box h3 {
+  margin-bottom: 60px;
+}
+
+.card_container .corpbiz_box p {
+  font-size: 19px;
+  line-height: 33px;
 }
 
 @media (max-width: 1200px) {
