--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -1,5 +1,6 @@
 @import "button";
 @import "collaborate";
+@import "colors";
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
@@ -17,7 +18,7 @@
   align-items: center;
   position: fixed;
   width: 100%;
-  background: #ffffff;
+  background: $white;
   top: 0;
   left: 0;
   right: 0;
@@ -46,7 +47,7 @@
         }
         a {
           text-decoration: none;
-          color: #6d6875;
+          color: $gray;
           position: relative;
           font-size: 20px;
           font-weight: bold;
@@ -60,11 +61,11 @@
     .btn {
       button {
         @extend .button_format;
-        background-color: #1b3b6f;
+        background-color: $blue;
         color: #ffffff;
       }
       button:hover {
-        background: #ff9f1c;
+        background: $orange;
       }
     }
 
@@ -74,19 +75,19 @@
       position: absolute;
       margin-top: 15px;
       box-shadow: 0 2px 10px 0 rgb(0, 0, 0.3);
-      background-color: #fff;
+      background-color: $white;
       width: 300px;
       border-radius: 5px;
       .drop_down:hover {
-        border-left: 3px solid fuchsia;
-        background-color: #fca311;
-        color: #ffffff;
+        border-left: 3px solid $blue;
+        background-color: $orange;
+        color: $white;
         p:hover {
-          color: #ffffff;
+          color: $white;
         }
       }
       p {
-        color: #1d4e89;
+        color: $blue;
         font-weight: bold;
         padding-left: 10px;
         font-size: 16px;
@@ -95,30 +96,30 @@
       .drop_down {
         @include collaborate;
         align-items: center;
-        border-bottom: 1px solid gray;
+        border-bottom: 1px solid $light_blue;
         padding: 0 15px;
       }
     }
     .fa-whatsapp {
       font-weight: bold;
-      color: #25d362;
-      font-size: 25px;
+      color: $whatsapp;
+      font-size: 27px;
 
       p {
-        color: #6d6875;
+        color: $gray;
         font-size: 20px;
         margin-top: 5px;
       }
     }
     .fa-phone {
-      color: #14213d;
+      color: $blue;
       font-size: 24px;
       font-weight: bold;
 
       p {
-        color: #6d6875;
+        color: $gray;
         font-size: 20px;
-        margin-top: 5px;
+        margin-top: 6px;
       }
     }
     .fa-play {
@@ -127,7 +128,7 @@
   }
 }
 .navbar_brand.shadow {
-  box-shadow: 0 0 20px black;
+  box-shadow: 0 0 20px $gray;
 }
 .background_image {
   background-image: url(/asset/images/backgroung.jpg);
@@ -140,21 +141,27 @@
     .search {
       @include collaborate;
       position: absolute;
-      border: 0.5px solid gray;
+      border: 0.5px solid $light_blue;
+      border-radius: 5px;
       align-items: center;
       gap: 0.1em;
       padding: 0 1em;
-      color: #9aaa97;
+      color: $orange;
       width: 50%;
-      margin-top: 60px;
+      margin-top: 70px;
       transform: translate(55%, 50%);
+      &:hover {
+        color: $blue;
+      }
       input {
-        height: 60px;
         border-radius: 30px;
         border: none;
         outline: none;
-        padding: 15px;
+        padding: 14px;
         background-color: transparent;
+      }
+      .fa-search {
+        cursor: pointer;
       }
     }
   }
@@ -209,6 +216,26 @@
     }
     .google_play img {
       width: 100%;
+    }
+  }
+}
+.card_container {
+  position: relative;
+  .corpbiz_box {
+    border: 1px solid blue;
+    background-color: #153c7b;
+    color: #ffffff;
+    width: 30%;
+    position: absolute;
+    left: 50px;
+    padding: 50px;
+    border-radius: 10px;
+    h3 {
+      margin-bottom: 60px;
+    }
+    p {
+      font-size: 19px;
+      line-height: 33px;
     }
   }
 }
