--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\User\day__six\styles\mediaquery.css);
+@import url(c:\Users\subaa\memo\day---six\styles\mediaquery.css);
 .button-basic, nav .header .navbar ul li .btn button {
   border-radius: 5px;
   font-size: 20px;
@@ -298,8 +298,14 @@ section .search-play .search-1:hover {
   section .search-play .search-1 {
     -webkit-transform: translate(5%, 50%);
             transform: translate(5%, 50%);
-    width: 80%;
+    width: 60%;
     background: #fff;
+  }
+}
+
+@media (max-width: 900px) {
+  section .search-play .search-1 {
+    width: 91%;
   }
 }
 
@@ -323,6 +329,12 @@ section .search-play .popular {
   width: 100%;
   -webkit-transform: translate(0%, 600%);
           transform: translate(0%, 600%);
+}
+
+@media (max-width: 900px) {
+  section .search-play .popular {
+    display: none;
+  }
 }
 
 section .search-play .popular h5 {
@@ -432,15 +444,16 @@ section .search-play .google-play {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -webkit-transform: translate(0%, 490%);
-          transform: translate(0%, 490%);
+  gap: 20px;
+  -webkit-transform: translate(3%, 500%);
+          transform: translate(3%, 500%);
 }
 
 @media (max-width: 900px) {
   section .search-play .google-play {
-    -webkit-transform: translate(15%, 150%);
-            transform: translate(15%, 150%);
-    display: block;
+    -webkit-transform: translate(-20%, 90%);
+            transform: translate(-20%, 90%);
+    display: inline-block;
   }
 }
 
@@ -452,6 +465,34 @@ section .search-play .google-play .google {
       -ms-flex-align: center;
           align-items: center;
   justify-self: flex-end;
+  gap: 10px;
+}
+
+@media (max-width: 900px) {
+  section .search-play .google-play .google {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 427px) {
+  section .search-play .google-play .google {
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    margin-right: 25px;
+  }
+}
+
+@media (max-width: 350px) {
+  section .search-play .google-play .google {
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    margin-right: 0px;
+  }
 }
 
 section .search-play .google-play .google img {
@@ -466,6 +507,76 @@ section .search-play .google-play .google .stars {
       -ms-flex-align: center;
           align-items: center;
   color: #efa434;
+}
+
+section .search-play .google-play .play {
+  display: block;
+}
+
+section .search-play .google-play .play p {
+  font-weight: bold;
+}
+
+@media (max-width: 900px) {
+  section .search-play .google-play .play p {
+    margin-top: 10px;
+    margin-bottom: -20px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 700;
+  }
+}
+
+@media (max-width: 520px) {
+  section .search-play .google-play .play p {
+    margin-left: 70px;
+  }
+}
+
+@media (max-width: 430px) {
+  section .search-play .google-play .play p {
+    text-align: right;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 350px) {
+  section .search-play .google-play .play p {
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    margin-right: -20px;
+  }
+}
+
+section .search-play .google-play .play img {
+  width: 200px;
+}
+
+@media (max-width: 900px) {
+  section .search-play .google-play .play img {
+    width: 50%;
+    height: 20vh;
+    margin-top: 20px;
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
+}
+
+@media (max-width: 650px) {
+  section .search-play .google-play .play img {
+    width: 70%;
+    -webkit-transform: translateX(30%);
+            transform: translateX(30%);
+  }
+}
+
+@media (max-width: 427px) {
+  section .search-play .google-play .play img {
+    width: 90%;
+    -webkit-transform: translateX(27%);
+            transform: translateX(27%);
+  }
 }
 
 @media (max-width: 1100px) {
