--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -130,7 +130,7 @@
 .navbar_brand.shadow {
   box-shadow: 0 0 20px $gray;
 }
-.background_image {
+.search_bar {
   background-image: url(/asset/images/backgroung.jpg);
   background-size: 100% 84%;
   background-repeat: no-repeat;
@@ -138,48 +138,98 @@
   margin-top: 5rem;
   height: 100vh;
   .search_box {
-    .search {
-      @include collaborate;
-      position: absolute;
-      border: 0.5px solid $light_blue;
-      border-radius: 5px;
-      align-items: center;
-      gap: 0.1em;
-      padding: 0 1em;
-      color: $orange;
-      width: 50%;
-      margin-top: 70px;
-      transform: translate(55%, 50%);
-      &:hover {
-        color: $blue;
-      }
-      input {
-        border-radius: 30px;
-        border: none;
-        outline: none;
-        padding: 14px;
-        background-color: transparent;
-      }
-      .fa-search {
-        cursor: pointer;
-      }
+    position: absolute;
+    border: 0.5px solid gray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.1em;
+    padding: 0.1em;
+    color: #ff7d00;
+    width: 50%;
+    margin-top: 60px;
+    transform: translate(55%, 50%);
+    input {
+      height: 40px;
+      border-radius: 30px;
+      border: none;
+      outline: none;
+      padding: 15px;
+      border-color: transparent;
     }
   }
+  // .search_box {
+  //   .search {
+  //     @include collaborate;
+  //     position: absolute;
+  //     border: 0.5px solid $light_blue;
+  //     border-radius: 5px;
+  //     align-items: center;
+  //     gap: 0.1em;
+  //     padding: 0 1em;
+  //     color: $orange;
+  //     width: 50%;
+  //     margin-top: 100px;
+  //     transform: translate(55%, 58%);
+  //     &:hover {
+  //       color: $blue;
+  //     }
+  //     input {
+  //       border-radius: 30px;
+  //       border: none;
+  //       outline: none;
+  //       padding: 14px;
+  //       background-color: transparent;
+  //     }
+  //     .fa-search {
+  //       cursor: pointer;
+  //     }
+  //   }
+  // }
   .popular {
     text-align: center;
     position: absolute;
     align-items: center;
     justify-content: center;
     width: 100%;
-    transform: translate(0, 600%);
+    transform: translate(0, 700%);
 
     h5 {
-      font-size: 20px;
+      font-size: 21px;
+      color: #3d5a80;
     }
   }
   .content {
-    transform: translate(5%, 300%);
-    margin: 0 100px;
+    transform: translate(0, 180%);
+    margin: 0 200px;
+    @media (max-width: 900px) {
+      display: none;
+    }
+    @media (max-width: 1440px) {
+      margin: 0 180px;
+    }
+    @media (max-width: 1365px) {
+      margin: 0 150px;
+    }
+    @media (max-width: 1245px) {
+      margin: 0 140px;
+    }
+    @media (max-width: 1206px) {
+      margin: 0 130px;
+    }
+    @media (max-width: 1165px) {
+      margin: 0 110px;
+    }
+    @media (max-width: 1085px) {
+      margin: 0 100px;
+    }
+    @media (max-width: 1045px) {
+      margin: 0 80px;
+    }
+    @media (max-width: 965px) {
+      margin: 0 60px;
+    }
+
     ul {
       display: flex;
       align-items: center;
@@ -191,31 +241,37 @@
       li {
         p {
           background-color: #c8deec;
+          font-weight: bold;
           font-size: 11px;
           border-radius: 10px;
-          margin: 5px 3px;
+          margin: 4px 7px;
           padding: 6px;
         }
       }
     }
   }
   .moblie_app {
-    display: flex;
-    align-items: center;
-    text-align: center;
+    width: 100%;
     position: absolute;
-    gap: 0.2em;
-    top: 60%;
-    left: 35%;
-
-    .google img {
-      width: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    transform: translate(0, 380%);
+    .google {
+      display: flex;
+      align-items: center;
+      justify-self: flex-end;
+      gap: 10px;
+      img {
+        width: 30px;
+      }
     }
-    i {
-      color: #fca311;
+    .stars {
+      display: flex;
+      align-items: center;
+      color: #ff7d00;
     }
-    .google_play img {
-      width: 100%;
+    .google_play {
+      display: block;
     }
   }
 }
@@ -320,6 +376,45 @@
     .open_menu,
     .close_menu {
       display: flex;
+    }
+  }
+}
+@media (max-width: 900px) {
+  .search_bar {
+    background-image: url(/asset/images/background_img.png);
+    width: 100%;
+    .popular {
+      display: none;
+    }
+    .search {
+      background-color: $white;
+    }
+    .moblie_app {
+      transform: translate(0, 90%);
+      display: inline-block;
+      // gap: 1em;
+      text-align: center;
+    }
+    .google {
+      justify-content: center;
+      justify-self: flex-end;
+      margin-bottom: 20px;
+      img {
+        width: 40px;
+      }
+      .stars {
+        display: flex;
+        align-items: center;
+        color: #ff7d00;
+      }
+    }
+    .google_play {
+      img {
+        width: 75%;
+        // height: 30vh;
+        // margin-top: 150px;
+        // transform: translateY(0);
+      }
     }
   }
 }
