--- a/style/suganya.css
+++ b/style/suganya.css
@@ -175,7 +175,7 @@
 
 .search_bar .search_box {
   position: absolute;
-  border: 0.5px solid gray;
+  border: 0.5px solid #bbdefb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,16 +186,22 @@
       -ms-flex-align: center;
           align-items: center;
   gap: 0.1em;
-  padding: 0.1em;
+  padding: 0 1em;
   color: #ff7d00;
-  width: 50%;
-  margin-top: 60px;
-  -webkit-transform: translate(55%, 50%);
-          transform: translate(55%, 50%);
+  width: 47%;
+  margin-top: 110px;
+  -webkit-transform: translate(57%, 50%);
+          transform: translate(57%, 50%);
+  border-radius: 5px;
+}
+
+.search_bar .search_box:hover {
+  color: #1b3b6f;
+  cursor: pointer;
 }
 
 .search_bar .search_box input {
-  height: 40px;
+  height: 45px;
   border-radius: 30px;
   border: none;
   outline: none;
@@ -347,28 +353,85 @@
   display: block;
 }
 
+@media (max-width: 500px) {
+  .search_bar .moblie_app {
+    top: 50px;
+  }
+  .search_bar .moblie_app .google_play {
+    margin-top: 30px;
+  }
+}
+
 .card_container {
-  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr;
+  margin-bottom: 50%;
+  gap: 20px;
+  padding: 20px;
+}
+
+@media (max-width: 900px) {
+  .card_container {
+    display: block;
+  }
 }
 
 .card_container .corpbiz_box {
-  border: 1px solid blue;
-  background-color: #153c7b;
-  color: #ffffff;
-  width: 30%;
-  position: absolute;
-  left: 50px;
-  padding: 50px;
-  border-radius: 10px;
+  border: 1px solid gray;
+  padding: 20px;
 }
 
 .card_container .corpbiz_box h3 {
-  margin-bottom: 60px;
+  font-size: 22px;
 }
 
 .card_container .corpbiz_box p {
-  font-size: 19px;
-  line-height: 33px;
+  font-size: 20px;
+}
+
+.card_container .animation_card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  text-align: center;
+}
+
+@media (max-width: 900px) {
+  .card_container .animation_card {
+    display: block;
+    padding-top: 20px;
+  }
+}
+
+.card_container .animation_card .card1 {
+  border: 1px solid gray;
+  margin: 20px 0;
+}
+
+.card_container .animation_card .card1 img {
+  width: 50%;
+}
+
+.card_container .animation_card .card2 {
+  border: 1px solid gray;
+  margin: 20px 0;
+}
+
+.card_container .animation_card .card2 img {
+  width: 50%;
+}
+
+.card_container .animation_card .card3 {
+  border: 1px solid gray;
+  margin: 20px 0;
+}
+
+.card_container .animation_card .card3 img {
+  width: 50%;
 }
 
 @media (max-width: 1200px) {
@@ -466,8 +529,15 @@
   .search_bar .popular {
     display: none;
   }
-  .search_bar .search {
+  .search_bar .search_box {
     background-color: #ffffff;
+    width: 90%;
+    -webkit-transform: translate(4%, -70%);
+            transform: translate(4%, -70%);
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    height: 50px;
   }
   .search_bar .moblie_app {
     -webkit-transform: translate(0, 90%);
