--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -63,9 +63,11 @@
         @extend .button_format;
         background-color: $blue;
         color: #ffffff;
-      }
-      button:hover {
-        background: $orange;
+        box-shadow: inset 0 0 0 0 #ff7d00;
+        transition: ease-out 0.5s;
+        &:hover {
+          box-shadow: inset 100px 0 0 0 #ff7d00;
+        }
       }
     }
 
@@ -182,6 +184,7 @@
   .content {
     transform: translate(0, 180%);
     margin: 0 200px;
+    position: relative;
     @media (max-width: 900px) {
       display: none;
     }
@@ -226,6 +229,10 @@
           border-radius: 10px;
           margin: 4px 7px;
           padding: 6px;
+          // transition: 1s all ease;
+          &:hover {
+            background: red;
+          }
         }
       }
     }
@@ -235,7 +242,7 @@
     position: absolute;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    transform: translate(0, 380%);
+    transform: translate(0, 300%);
     .google {
       display: flex;
       align-items: center;
@@ -252,6 +259,18 @@
     }
     .google_play {
       display: block;
+      p {
+        font-size: 14px;
+        letter-spacing: -1px;
+        font-weight: bold;
+        margin: 0 5px -18px 50px;
+        // margin-left: 50px;
+        // margin-bottom: -18px;
+      }
+      img {
+        width: 35%;
+        height: 100%;
+      }
     }
     @media (max-width: 500px) {
       top: 50px;
@@ -264,23 +283,29 @@
 
 .card_container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  margin-bottom: 50%;
-  gap: 20px;
-  padding: 20px;
+  grid-template-columns: 1fr 2.5fr;
+  // margin-bottom: 50%;
+  gap: 50px;
+
+  margin: 40px;
   @media (max-width: 900px) {
     display: block;
   }
   .corpbiz_box {
-    border: 1px solid gray;
-    // width: 80%;
-    padding: 20px;
-
+    border: 1px solid;
+    border: none;
+    background-color: #15426d;
+    border-radius: 10px;
+    color: #ffffff;
+    padding: 50px;
+    // text-align: justify;
     h3 {
-      font-size: 22px;
+      font-size: 24px;
+      // font-family: ;
+      margin-bottom: 50px;
     }
     p {
-      font-size: 20px;
+      font-size: 18px;
     }
   }
   .animation_card {
@@ -292,28 +317,23 @@
       display: block;
       padding-top: 20px;
     }
-
-    .card1 {
-      border: 1px solid gray;
+    .cards {
+      padding: 30px;
+      border: 1px solid;
       margin: 20px 0;
-      img {
-        width: 50%;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px 0 rgb(0, 0, 0.3);
+      h2 {
+        font-size: 22px;
+        margin-bottom: 20px;
       }
-    }
-    .card2 {
-      border: 1px solid gray;
-      margin: 20px 0;
-
-      img {
-        width: 50%;
+      p {
+        font-size: 18px;
       }
-    }
-    .card3 {
-      border: 1px solid gray;
-      margin: 20px 0;
-
       img {
-        width: 50%;
+        margin-bottom: 10px;
+        width: 20%;
       }
     }
   }
